# FD

./: .flake8  .gitignore  .pre-commit-config.yaml  alembic.ini  domain_model_glossary.txt  mypy.ini  pyproject.toml
app/: config.py  main.py
app/db/: session.py  utils.py  validators.py
app/db/models/: __init__.py  base.py  mappers.py
app/db/models/criminal/: criminal.py
app/db/models/detective_history/: clue.py  detective_history.py  proofs.py
app/db/models/person/: characteristics.py  dossier.py  hobbies.py  motives.py  person.py  special_sign.py
app/db/repositories/: __init__.py  repository.py
app/db/repositories/base/: abstract_repo.py
app/db/uow/: abstract_uow.py  base_uow.py
app/domain/criminal/: __init__.py  criminal_type.py
app/domain/detective_history/: __init__.py  clue.py  member.py  proofs.py  status.py
app/domain/person/: __init__.py
app/domain/person/characteristics/: __init__.py  color.py  sex.py  (+1 more)
app/tests/: conftest.py
app/tests/integration/: conftest.py
migrations/: env.py
migrations/versions/: 198d71d80066_generate_clue_model.py  2ce57e21d87c_generate_person_model.py  392e1ab9d1dd_generate_motive_table.py  61d733c0f020_generate_special_sign_model.py  682b35f709ce_return_nullable_fields.py  83f2d143f616_generate_characteristics_table.py  923730a658fe_generate_detective_history_model.py  9a28cd21be36_update_nullable_fields.py  a8fc466d6915_generate_proof_model.py  e96bbe63aa21_generate_special_sign_model.py  e9c1bd19f367_generate_hobby_table.py  fac11edd9da0_generate_dossier_table.py  fedfe6316b61_generate_criminal_model.py
(+23 files in other folders)
