[tool.poetry]
name = "fd"
version = "0.1.0"
description = ""
authors = ["roma <roma.marhatok@yandex.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.99.0"}
SQLAlchemy = "^2.0.17"
asyncpg = "^0.27.0"
alembic = "^1.11.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
webcolors = "^1.13"
sqlalchemy-utils = "^0.41.1"
psycopg = "^3.1.10"
yarl = "^1.9.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^3.3.3"
mypy = "^1.4.1"
faker = "^19.3.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
